--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <button type="button" class='btn btn-dark btn-lg download-button'><i class="fab fa-apple"></i> Download</button>
           <button type="button" class='btn btn-outline-light btn-lg download-button'><i class="fab fa-google-play"></i> Download</button>
         </div>
-        <div class='col-lg-6 col-sm-12'>
+        <div class='col-lg-6 col-sm-12 fixdiv'>
           <img class='title-image' src="images/iphone6.png" alt="iphone-mockup">
         </div>
       </div>
@@ -78,7 +78,6 @@
   <!-- Features -->
 
   <section id="features">
-
     <div class="row">
       <div class="col-lg-4 col-sm-12 featurerow">
         <i class="fas fa-check-circle featurepic"></i>
@@ -103,7 +102,7 @@
   <!-- Testimonials -->
 
   <section id="testimonials">
-    <p class='testimonial-title'>testimonials</p>
+    <p class='testimonial-title'>Testimonials</p>
         <div class="row">
           <div class="col-lg-4 col-sm-12 testrow">
             <img class='testpic' src="images/stephbeach.jpg" alt="">
@@ -122,15 +121,15 @@
           </div>
         </div>
 
-      </section>
+  </section>
 
   <!-- Press -->
 
   <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
+    <img class='presspic' src="images/techcrunch.png" alt="tc-logo">
+    <img class='presspic' src="images/tnw.png" alt="tnw-logo">
+    <img class='presspic' src="images/bizinsider.png" alt="biz-insider-logo">
+    <img class='presspic' src="images/mashable.png" alt="mashable-logo">
 
   </section>
 
@@ -138,34 +137,62 @@
   <!-- Pricing -->
 
   <section id="pricing">
+    <h2 class='pricetitle'>A Plan for Every Dog's Needs</h2>
+    <p class='pricetitle2'>Simple and affordable price plans for your and your dog.</p>
 
-    <h2>A Plan for Every Dog's Needs</h2>
-    <p>Simple and affordable price plans for your and your dog.</p>
+      <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+        <div class="pricing-column col-lg-4 col-md-6 col-sm-12">
+          <div class='card'>
+            <div class='card-header'>
+              <h3 class='pricehead'>Chihuahua</h3>
+            </div>
+            <div class='card-body'>
+              <h2 class='priceh2'>Free</h2>
+              <p class='pricepar'>5 Matches Per Day</p>
+              <p class='pricepar'>10 Messages Per Day</p>
+              <p class='pricepar'>Unlimited App Usage</p>
+              <button type="button" class="w-100 btn btn-lg btn-outline-dark">Sign Up</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="pricing-column col-lg-4 col-md-6 col-sm-12">
+          <div class='card'>
+            <div class='card-header'>
+              <h3 class='pricehead'>Labrador</h3>
+            </div>
+            <div class='card-body'>
+              <h2 class='priceh2'>$49 / mo</h2>
+              <p class='pricepar'>Unlimited Matches</p>
+              <p class='pricepar'>Unlimited Messages</p>
+              <p class='pricepar'>Unlimited App Usage</p>
+              <button type="button" class="w-100 btn btn-lg btn-dark">Sign Up</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="pricing-column col-lg-4 col-md-12 col-sm-12">
+          <div class='card'>
+            <div class='card-header'>
+              <h3 class='pricehead'>Mastiff</h3>
+            </div>
+            <div class='card-body'>
+              <h2 class='priceh2'>$99 / mo</h2>
+              <p class='pricepar'>Pirority Listing</p>
+              <p class='pricepar'>Unlimited Matches</p>
+              <p class='pricepar'>Unlimited Messages</p>
+              <p class='pricepar'>Unlimited App Usage</p>
+              <button type="button" class="w-100 btn btn-lg btn-dark">Sign Up</button>
+            </div>
+          </div>
+        </div>
 
 
-    <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
 
 
-    <h3>Labrador</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
 
+    </div>
 
-    <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
 
   </section>
 
@@ -174,9 +201,9 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class='ctatext'>Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button" class='btn btn-dark btn-lg bottom-button'><i class="fab fa-apple"></i> Download</button>
+    <button type="button" class='btn btn-outline-light btn-lg bototm-button'><i class="fab fa-google-play"></i> Download</button>
 
   </section>
 
@@ -185,7 +212,7 @@
 
   <footer id="footer">
 
-    <p>© Copyright 2018 TinDog</p>
+    <p class='footertext'>© Copyright 2018 TinDog</p>
 
   </footer>
 
